# EAE_Firmware

./: CMakeLists.txt  README.md
include/: canbus.hpp  canframe.hpp  controllernode.hpp  sensornode.hpp
src/: canbus.cpp  controllernode.cpp  main.cpp  sensornode.cpp
tests/: CMakeLists.txt  test_cansimulator.cpp
